// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedDonut using SVG should render an N-level hierarchy correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-donut"
    >
      <path
        class="pie-slice"
        d="M0.327,-55.332A55.333,55.333,0,0,1,0.327,55.332L0.327,34.998A35,35,0,0,0,0.327,-34.998Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="3.141592653589793"
        data-inner-radius="35"
        data-outer-radius="55.33333333333333"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="0"
        style="fill: #99c1dc; opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M-0.327,55.332A55.333,55.333,0,0,1,-0.327,-55.332L-0.327,-34.998A35,35,0,0,0,-0.327,34.998Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="6.283185307179586"
        data-inner-radius="35"
        data-outer-radius="55.33333333333333"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="3.141592653589793"
        style="fill: #fc998e; opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M0.483,-77.665A77.667,77.667,0,0,1,77.665,-0.483L57.331,-0.483A57.333,57.333,0,0,0,0.483,-57.331Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="1.5707963267948966"
        data-inner-radius="57.33333333333333"
        data-outer-radius="77.66666666666666"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="0"
        style="fill: rgb(153, 193, 220); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M77.665,0.483A77.667,77.667,0,0,1,0.483,77.665L0.483,57.331A57.333,57.333,0,0,0,57.331,0.483Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="3.141592653589793"
        data-inner-radius="57.33333333333333"
        data-outer-radius="77.66666666666666"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="1.5707963267948966"
        style="fill: rgb(198, 220, 235); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M-0.483,77.665A77.667,77.667,0,0,1,-0.483,-77.665L-0.483,-57.331A57.333,57.333,0,0,0,-0.483,57.331Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="6.283185307179586"
        data-inner-radius="57.33333333333333"
        data-outer-radius="77.66666666666666"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="3.141592653589793"
        style="fill: rgb(252, 153, 142); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M0.639,-99.998A100,100,0,0,1,99.998,-0.639L79.664,-0.639A79.667,79.667,0,0,0,0.639,-79.664Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="1.5707963267948966"
        data-inner-radius="79.66666666666666"
        data-outer-radius="99.99999999999999"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="0"
        style="fill: rgb(153, 193, 220); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M99.998,0.639A100,100,0,0,1,0.639,99.998L0.639,79.664A79.667,79.667,0,0,0,79.664,0.639Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="3.141592653589793"
        data-inner-radius="79.66666666666666"
        data-outer-radius="99.99999999999999"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="1.5707963267948966"
        style="fill: rgb(198, 220, 235); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M-0.639,99.998A100,100,0,0,1,-0.639,-99.998L-0.639,-79.664A79.667,79.667,0,0,0,-0.639,79.664Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="6.283185307179586"
        data-inner-radius="79.66666666666666"
        data-outer-radius="99.99999999999999"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="3.141592653589793"
        style="fill: rgb(252, 153, 142); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`StackedDonut using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-donut"
    >
      <path
        class="pie-slice"
        d="M0.376,-66.499A66.5,66.5,0,0,1,0.376,66.499L0.376,34.998A35,35,0,0,0,0.376,-34.998Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="3.141592653589793"
        data-inner-radius="35"
        data-outer-radius="66.5"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="0"
        style="fill: #99c1dc; opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M-0.376,66.499A66.5,66.5,0,0,1,-0.376,-66.499L-0.376,-34.998A35,35,0,0,0,-0.376,34.998Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="6.283185307179586"
        data-inner-radius="35"
        data-outer-radius="66.5"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="3.141592653589793"
        style="fill: #fc998e; opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M0.606,-99.998A100,100,0,0,1,99.998,-0.606L68.497,-0.606A68.5,68.5,0,0,0,0.606,-68.497Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="1.5707963267948966"
        data-inner-radius="68.5"
        data-outer-radius="100"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="0"
        style="fill: rgb(153, 193, 220); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M99.998,0.606A100,100,0,0,1,0.606,99.998L0.606,68.497A68.5,68.5,0,0,0,68.497,0.606Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="3.141592653589793"
        data-inner-radius="68.5"
        data-outer-radius="100"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="1.5707963267948966"
        style="fill: rgb(198, 220, 235); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
      <path
        class="pie-slice"
        d="M-0.606,99.998A100,100,0,0,1,-0.606,-99.998L-0.606,-68.497A68.5,68.5,0,0,0,-0.606,68.497Z"
        data-corner-radius="0"
        data-cx="100"
        data-cy="100"
        data-end-angle="6.283185307179586"
        data-inner-radius="68.5"
        data-outer-radius="100"
        data-pad-angle="0.01"
        data-path-type="arc"
        data-start-angle="3.141592653589793"
        style="fill: rgb(252, 153, 142); opacity: 0.7; cursor: pointer;"
        transform="translate(100, 100)"
      />
    </g>
  </svg>
</DocumentFragment>
`;
